new form responsive and footer bg change

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,9 +1,9 @@
 $title:'Raleway', sans-serif;
-$transform: uppercase;
 $colortext:#e7e8e9;
 $cursor: default;
 $sizetitle: 2.5em;
 $sizetext: 1.6em;
+$unirsecolor: #f93e3c;
 
 $titleweight: 400;
 $text: 'Oswald', sans-serif;
