--- a/css/estilos.css
+++ b/css/estilos.css
@@ -432,27 +432,10 @@ nav .navbar-collapse .navbar-nav .nav-button:hover {
 }
 
 .backgroundunirse {
-  padding: 2vh;
-  font-family: "Oswald", sans-serif;
-}
-
-.backgroundunirse #form {
-  width: 850px;
-  background: #111111;
-  padding: 30px;
-  margin: auto;
-  color: #bbb8b8;
-  border-radius: 20px;
-}
-
-.backgroundunirse #form .form__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  height: 100vh;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -461,76 +444,247 @@ nav .navbar-collapse .navbar-nav .nav-button:hover {
           align-items: center;
 }
 
-.backgroundunirse #form .form__container .form__block1 {
-  padding-right: 40px;
-}
-
-.backgroundunirse #form .form__container .form__block1 .form__block1--controls {
+.backgroundunirse .form__container {
+  max-width: 700px;
   width: 100%;
-  background: #fff3;
-  padding: 10px;
-  border-radius: 20px;
-  margin-bottom: 16px;
-  border: 0px;
-  font-size: 1em;
+  background: #111111;
+  padding: 25px 30px;
+  border-radius: 10px;
+  border: 1px solid #f93e3c;
+}
+
+.backgroundunirse .form__container .form__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-family: "Oswald", sans-serif;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  color: #f93e3c;
+  font-size: 3em;
+  font-weight: 500;
+  position: relative;
+}
+
+.backgroundunirse .form__container form input[type="radio"] {
+  display: none;
+}
+
+.backgroundunirse .form__container form .form__user-details {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 20px 0 12px 0;
+}
+
+.backgroundunirse .form__container form .form__user-details .form__input-box {
+  margin-bottom: 15px;
+  width: calc(100% / 2 - 20px);
+}
+
+.backgroundunirse .form__container form .form__user-details .form__input-box .form__input {
+  height: 40px;
+  width: 100%;
+  outline: none;
   color: #000;
-}
-
-.backgroundunirse #form .form__container .form__block1 .form__block1--title {
-  font-size: 1.5em;
-  margin-bottom: 0px;
-}
-
-.backgroundunirse #form .form__container .form__block2 .form__block2--spacing {
-  padding: 2px;
-}
-
-.backgroundunirse #form .form__container .form__block2 .form__block2--spacing .form__block2--title {
-  font-size: 1.5em;
-  margin-bottom: 12px;
-}
-
-.backgroundunirse #form .form__container .form__block2 .form__block2--spacing .form__block2--spacingtext {
-  padding-left: 5px;
-  font-size: 1.2em;
-}
-
-.backgroundunirse #form .form__container .form__block2 .form__block2--spacing .form__block2--subtitle {
-  font-size: 1.5em;
-  margin-bottom: 20px;
-}
-
-.backgroundunirse #form .form__container .form__block2 .form__block2--spacing .form__block2--colorbutton {
   background: #fff3;
-  border-radius: 6px;
-  color: #bbb8b8;
+  border-radius: 20px;
+  border: 1px solid #ccc;
+  padding-left: 15px;
+  font-size: 1em;
+  border-bottom-width: 2px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-.backgroundunirse #form .form__container .form__block2 .form__block2--textarea {
-  width: 340px;
-  height: 130px;
+.backgroundunirse .form__container form .form__user-details .form__input-box .form__input:focus {
+  border-color: #f93e3c;
+}
+
+.backgroundunirse .form__container form .form__user-details .form__input-box .form__input:valid {
+  border-color: #f93e3c;
+}
+
+.backgroundunirse .form__container form .form__user-details .form__input-box .form__details {
+  display: block;
+  font-size: 1.4em;
+  font-family: "Oswald", sans-serif;
+  color: #e7e8e9;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+
+.backgroundunirse .form__container form .form__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.backgroundunirse .form__container form .form__block .form__gender-details .form__gender-title {
+  font-size: 1.4em;
+  font-family: "Oswald", sans-serif;
+  color: #e7e8e9;
+  font-weight: 500;
+}
+
+.backgroundunirse .form__container form .form__block .form__gender-details .form__category {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 31.8%;
+  margin: 14px 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.backgroundunirse .form__container form .form__block .form__gender-details .form__category .form__gender-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.backgroundunirse .form__container form .form__block .form__gender-details .form__category .form__gender-label .form__gender {
+  font-size: 1.2em;
+  font-family: "Oswald", sans-serif;
+  color: #e7e8e9;
+  padding-right: 20px;
+}
+
+.backgroundunirse .form__container form .form__block .form__gender-details .form__category .form__gender-label .form__dot {
+  height: 15px;
+  width: 15px;
+  background: #d9d9d9;
+  border-radius: 50%;
+  margin-right: 10px;
+  border: 5px solid transparent;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.backgroundunirse .form__container form .form__block .form__options {
+  width: 50%;
+  margin-left: 30px;
+}
+
+.backgroundunirse .form__container form .form__block .form__options .form__options-title {
+  font-size: 1.4em;
+  font-family: "Oswald", sans-serif;
+  color: #e7e8e9;
+  font-weight: 500;
+}
+
+.backgroundunirse .form__container form .form__block .form__options .form__select {
+  margin: 14px 0;
+  background: #c4c4c4;
+  border-radius: 20px;
+  font-family: "Oswald", sans-serif;
+  font-weight: 500;
+}
+
+.backgroundunirse .form__container form .form__block .form__options .form__select .form__option {
+  color: black;
+}
+
+.backgroundunirse .form__container form .form__objetives {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.backgroundunirse .form__container form .form__objetives .form__textarea-title {
+  text-align: center;
+  margin-bottom: 10px;
+  font-size: 1.4em;
+  font-family: "Oswald", sans-serif;
+  color: #e7e8e9;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.backgroundunirse .form__container form .form__objetives .form__textarea {
+  border-radius: 20px;
+  background: #c4c4c4;
+  font-style: "Oswald", sans-serif;
+  font-size: 1.2em;
+  width: 100%;
+  height: 150px;
   -webkit-transition: all 1s;
   transition: all 1s;
-  margin-bottom: 12px;
+  border-color: #ccc;
+  outline: none;
 }
 
-.backgroundunirse #form .form__container .form__block2 .form__block2--textarea:focus {
-  width: 450px;
-  height: 200px;
-  font-size: 1.5em;
+.backgroundunirse .form__container form .form__objetives .form__textarea:focus {
+  border-color: #f93e3c;
 }
 
-/* RECIBE */
-#backgroundRecibe {
-  width: 100%;
+.backgroundunirse .form__container form .form__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 45px;
+  margin: 45px 0;
+}
+
+.backgroundunirse .form__container form .form__button .form__button-input {
   height: 100%;
-  background-color: #4c4c54;
+  width: 70%;
+  outline: none;
+  background: #fff3;
+  border: 1px solid #e7e8e9;
+  color: #f93e3c;
+  border: none;
+  border-radius: 40px;
+  font-weight: 1em;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-weight: 600;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.backgroundunirse .form__container form .form__button .form__button-input:hover {
+  color: #fff;
+  background: #f93e3c;
+}
+
+#dot-1:checked ~ .form__category .form__gender-label .form__one,
+#dot-2:checked ~ .form__category .form__gender-label .form__two {
+  border-color: #d9d9d9;
+  background: #f93e3c;
 }
 
 /* FOOTER */
+footer {
+  margin-top: 20vh;
+}
+
 footer .footercontent {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 253, 0)), color-stop(120%, black));
-  background: linear-gradient(180deg, rgba(255, 255, 253, 0) 0%, black 120%);
+  background: #19001c;
+  border-top: 1px solid #570029;
 }
 
 footer .footercontent .footercontent__socials {
@@ -590,6 +744,10 @@ footer .footerbutton .footerbutton__text .footerbutton__text-span {
 
 /* MEDIA QUERIES */
 @media (min-width: 50px) and (max-width: 576px) {
+  /* NAVBAR */
+  .navbar-brand {
+    display: none;
+  }
   /* INICIO */
   .containerinicio {
     -webkit-box-orient: vertical;
@@ -648,6 +806,37 @@ footer .footerbutton .footerbutton__text .footerbutton__text-span {
     width: 80%;
     margin: 80px auto -50px auto;
   }
+  /* UNIRSE*/
+  .backgroundunirse .form__container {
+    max-width: 100%;
+  }
+  .backgroundunirse .form__container form .form__user-details {
+    max-height: 300px;
+    overflow-y: scroll;
+  }
+  .backgroundunirse .form__container form .form__user-details::-webkit-scrollbar {
+    width: 0;
+  }
+  .backgroundunirse .form__container form .form__user-details .form__input-box {
+    margin-bottom: 15px;
+    width: 100%;
+  }
+  .backgroundunirse .form__container form .form__category {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .backgroundunirse .form__container form .form__block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .backgroundunirse .form__container form .form__block .form__options {
+    margin-left: 0px;
+  }
   /* FOOTER */
   footer .footercontent .footercontent__socials {
     -webkit-box-pack: space-evenly;
@@ -659,39 +848,6 @@ footer .footerbutton .footerbutton__text .footerbutton__text-span {
   }
   footer .footerbutton .footerbutton__text {
     font-size: 0.7em;
-  }
-  .navbar-brand {
-    display: none;
-  }
-  .backgroundunirse #form {
-    width: 520px;
-    margin: 0px;
-  }
-  .backgroundunirse #form .form__container {
-    display: block;
-  }
-  .backgroundunirse #form .form__container .form__block1 {
-    padding-right: 9px;
-  }
-  .backgroundunirse {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .backgroundunirse #form {
-    width: 730px;
-  }
-  .backgroundGaleria .containergaleria .containergaleria__img {
-    width: 530px;
-  }
-  .titlegaleria .titlegaleria__text {
-    font-size: 3.5em;
-  }
-  .backgroundGaleria .containergaleria {
-    width: 100%;
   }
 }
 
@@ -766,30 +922,6 @@ footer .footerbutton .footerbutton__text .footerbutton__text-span {
   footer .footerbutton .footerbutton__text {
     font-size: 0.8em;
   }
-  .backgroundunirse #form {
-    width: 520px;
-    margin: 0px;
-  }
-  .backgroundunirse #form .form__container {
-    display: block;
-  }
-  .backgroundunirse #form .form__container .form__block1 {
-    padding-right: 9px;
-  }
-  .backgroundunirse {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .backgroundunirse #form {
-    width: 730px;
-  }
-  .backgroundGaleria .containergaleria {
-    width: 100%;
-  }
 }
 
 @media (min-width: 768px) and (max-width: 992px) {
@@ -847,15 +979,6 @@ footer .footerbutton .footerbutton__text .footerbutton__text-span {
   .historia__container .historia__block {
     width: 80%;
     margin: 80px auto -50px auto;
-  }
-  .form__block1--controls {
-    width: 90%;
-  }
-  .form__block1 {
-    padding-right: 0px;
-  }
-  .backgroundunirse #form {
-    width: 730px;
   }
 }
 
