--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -38,7 +38,7 @@ nav{
     }
     .navbar-brand{
         font-size: 2.5em;
-        font-weight: $titleweight;
+        font-weight: 400;
         font-family: 'Ninja Naruto', sans-serif;
         font-style: italic;
         padding-top: 0.5rem;
@@ -53,7 +53,7 @@ nav{
         .navbar-nav{
             color: $colortext;
             font-size: 18px;
-            font-family: $title;
+            font-family: $raleway;
             text-decoration: none;
             letter-spacing: 1px;
             .nav-link{
@@ -112,7 +112,7 @@ nav{
     padding-right: 10vh;
     .bannerinicio__title{
         font-size: 10em;
-        font-family: $title;
+        font-family: $raleway;
         font-weight: bold;
         color: #dcd1d6;
         margin-right: 2vh;
@@ -139,7 +139,7 @@ nav{
     .containerinicio__text{
         width: 50%;
         padding: 4vh;
-        font-family: $text;
+        font-family: $oswald;
         color: $colortext;
         text-align: center;
         .containerinicio__title{
@@ -161,7 +161,7 @@ nav{
         @include display(column);
         width: 50%;
         color: $colortext;
-        font-family: $text;
+        font-family: $oswald;
         margin: 3vh;
         .containerpelea__title{
             color: #7a1434;
@@ -192,7 +192,7 @@ nav{
         width: 50%;
         margin: 5vh;
         color: $colortext;
-        font-family: $text;
+        font-family: $oswald;
         .containerestatua__title{
             color: #7a1434;
             font-size: $sizetitle;
@@ -252,7 +252,7 @@ nav{
             margin: 10px;
             background: #1c1c1c;
             border-radius: 40px;
-            font-family: $text;
+            font-family: $oswald;
             .historia__block_img{
                 width: 100%;
                 border: 3px solid #777;
@@ -312,7 +312,7 @@ nav{
 
 .backgroundunirse{
     display: flex;
-    height: 100vh;
+    height: 130vh;
     justify-content: center;
     align-items: center;
     .form__container{
@@ -325,7 +325,7 @@ nav{
         .form__title{
             display: flex;
             justify-content: center;
-            font-family: $text;
+            font-family: $oswald;
             letter-spacing: 5px;
             text-transform: uppercase;
             color: #f93e3c;
@@ -367,7 +367,7 @@ nav{
                     .form__details{
                         display: block;
                         font-size: 1.4em;
-                        font-family: $text;
+                        font-family: $oswald;
                         color: $colortext;
                         font-weight: 500;
                         margin-bottom: 5px;
@@ -380,7 +380,7 @@ nav{
                 .form__gender-details{
                     .form__gender-title{
                         font-size: 1.4em;
-                        font-family: $text;
+                        font-family: $oswald;
                         color: $colortext;
                         font-weight: 500;
                     }
@@ -394,7 +394,7 @@ nav{
                             align-items: center;
                             .form__gender{
                                 font-size: 1.2em;
-                                font-family: $text;
+                                font-family: $oswald;
                                 color: $colortext;
                                 padding-right: 20px;
                             }
@@ -415,7 +415,7 @@ nav{
                     margin-left: 30px;
                     .form__options-title{
                         font-size: 1.4em;
-                        font-family: $text;
+                        font-family: $oswald;
                         color: $colortext;
                         font-weight: 500;
                     }
@@ -423,7 +423,7 @@ nav{
                         margin: 14px 0;
                         background: #c4c4c4;
                         border-radius: 20px;
-                        font-family: $text;
+                        font-family: $oswald;
                         font-weight: 500;
                         .form__option{
                             color: black;
@@ -438,7 +438,7 @@ nav{
                     text-align: center;
                     margin-bottom: 10px;
                     font-size: 1.4em;
-                    font-family: $text;
+                    font-family: $oswald;
                     color: $colortext;
                     font-weight: 500;
                     text-transform: uppercase;
@@ -446,7 +446,7 @@ nav{
                 .form__textarea{
                     border-radius: 20px;
                     background: #c4c4c4;
-                    font-style: $text;
+                    font-style: $oswald;
                     font-size: 1.2em;
                     width: 100%;
                     height: 150px;
@@ -471,6 +471,7 @@ nav{
                     border: 1px solid $colortext;
                     color: $unirsecolor;
                     border: none;
+                    border: 1px solid #ffffffb5;
                     border-radius: 40px;
                     font-weight: 1em;
                     letter-spacing: 1px;
@@ -498,8 +499,8 @@ nav{
 footer{
     margin-top: 20vh;
     .footercontent{
-        background: #19001c;
-        border-top: 1px solid #570029;
+        background: #131313;
+        border-top: 1px solid #6a6a6a;
         .footercontent__socials{
             list-style: none;
             margin-bottom: 0px;
